fix: changed spacing values, from calculated to explicit

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Wed, 13 Dec 2023 09:20:38 GMT
+// Generated on Wed, 13 Dec 2023 09:44:57 GMT
 
 $icon-size-xxl: 64px;
 $icon-size-xl: 48px;
@@ -47,10 +47,16 @@ $font-line-height-l: 40px;
 $font-line-height-m: 32px;
 $font-line-height-xs: 24px;
 $font-line-height-xxs: 16px;
-$baseline: 4px;
 $font-mono: 'Roboto Mono';
 $font-serif: 'Lora';
 $font-sans: 'Titillium Web';
+$spacing-xxl: 48px;
+$spacing-xl: 40px;
+$spacing-l: 32px;
+$spacing-m: 24px;
+$spacing-s: 16px;
+$spacing-xs: 8px;
+$spacing-xxs: 4px;
 $font-weight-bold: 700;
 $font-weight-semibold: 600;
 $font-weight-regular: 400;
@@ -153,6 +159,23 @@ $blockquote-cite-font: $font-sans;
 $blockquote-font: $font-sans;
 $blockquote-cite-size: $font-size-1;
 $blockquote-font-size: $font-size-3;
+$spacing-inset-xxl: $spacing-xxl;
+$spacing-inset-xl: $spacing-xl;
+$spacing-inset-l: $spacing-l;
+$spacing-inset-m: $spacing-m;
+$spacing-inset-s: $spacing-s;
+$spacing-inset-xs: $spacing-xs;
+$spacing-inline-l: $spacing-l;
+$spacing-inline-m: $spacing-m;
+$spacing-inline-s: $spacing-s;
+$spacing-inline-xs: $spacing-xs;
+$spacing-inline-xxs: $spacing-xxs;
+$spacing-stack-xxl: $spacing-xxl;
+$spacing-stack-xl: $spacing-xl;
+$spacing-stack-l: $spacing-l;
+$spacing-stack-m: $spacing-m;
+$spacing-stack-s: $spacing-s;
+$spacing-stack-xs: $spacing-xs;
 $caption-font: $font-sans;
 $body-font-serif: $font-serif;
 $body-font-mono: $font-mono;
@@ -206,13 +229,6 @@ $theme-color-dark: $color-blue-30;
 $theme-color-base: $color-blue-40;
 $theme-color-light: $color-blue-77;
 $theme-color-lighter: $color-blue-97;
-$spacing-xxl: $baseline * 12;
-$spacing-xl: $baseline * 10;
-$spacing-l: $baseline * 8;
-$spacing-m: $baseline * 6;
-$spacing-s: $baseline * 4;
-$spacing-xs: $baseline * 2;
-$spacing-xxs: $baseline;
 $color-outline-focus: $color-gray-10;
 $color-text-accent: $color-teal-32;
 $color-text-inverse: $color-white;
@@ -302,20 +318,3 @@ $icon-primary-active: $color-background-primary-active;
 $icon-primary-hover: $color-background-primary-hover;
 $icon-primary: $color-background-primary;
 $icon-default: $color-text-base;
-$spacing-inset-xxl: $spacing-xxl;
-$spacing-inset-xl: $spacing-xl;
-$spacing-inset-l: $spacing-l;
-$spacing-inset-m: $spacing-m;
-$spacing-inset-s: $spacing-s;
-$spacing-inset-xs: $spacing-xs;
-$spacing-inline-l: $spacing-l;
-$spacing-inline-m: $spacing-m;
-$spacing-inline-s: $spacing-s;
-$spacing-inline-xs: $spacing-xs;
-$spacing-inline-xxs: $spacing-xxs;
-$spacing-stack-xxl: $spacing-xxl;
-$spacing-stack-xl: $spacing-xl;
-$spacing-stack-l: $spacing-l;
-$spacing-stack-m: $spacing-m;
-$spacing-stack-s: $spacing-s;
-$spacing-stack-xs: $spacing-xs;
